@@ -5,7 +5,9 @@
 	+ Bugfix: alias are deleted when user account is deleted
 	+ Bugfix: when already exists the maildir, create a new account is
 	not allowed
-	+ Bugfix: fixed error in mail queue template: avoid to reference a possible udefined value
+	+ Bugfix: fixed error in mail queue template: avoid to reference a
+	possible udefined value
+	+ Bugfix: running method in Greylsit does not fail if there is not eventd fil
 0.12.101
 	+ Bugfix: Postgrey daemon is disabled by default
 0.12.100
